--- a/templates/demande_conge/_form.html.twig
+++ b/templates/demande_conge/_form.html.twig
@@ -1,4 +1,40 @@
-{{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+{{ form_start(form, {'attr': {'class': 'needs-validation', 'novalidate': ''}}) }}
+    <div class="row g-3">
+        <div class="col-12">
+            {{ form_row(form.utilisateur) }}
+        </div>
+
+        <div class="col-12 col-md-4">
+            {{ form_row(form.dateDebut) }}
+        </div>
+
+        <div class="col-12 col-md-4">
+            {{ form_row(form.dateFin) }}
+        </div>
+
+        <div class="col-12 col-md-4">
+            {{ form_row(form.dateDemande) }}
+        </div>
+
+        <div class="col-12 col-md-6">
+            {{ form_row(form.typeConge) }}
+        </div>
+
+        <div class="col-12 col-md-6">
+            {{ form_row(form.statut) }}
+        </div>
+
+        <div class="col-12">
+            {{ form_row(form.commentaire) }}
+        </div>
+    </div>
+
+    <div class="d-flex gap-2 mt-4">
+        <button type="submit" class="btn btn-primary">
+            <i class="bi bi-check-circle"></i> {{ button_label|default('Enregistrer') }}
+        </button>
+        <a href="{{ path('app_demande_conge_index') }}" class="btn btn-outline-secondary">
+            <i class="bi bi-x-circle"></i> Annuler
+        </a>
+    </div>
 {{ form_end(form) }}
