--- a/templates/etat_consommable/_form.html.twig
+++ b/templates/etat_consommable/_form.html.twig
@@ -1,4 +1,44 @@
-{{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+{{ form_start(form, {'attr': {'class': 'needs-validation', 'novalidate': ''}}) }}
+    <div class="row g-3">
+        <div class="col-12">
+            {{ form_row(form.imprimante) }}
+        </div>
+
+        <div class="col-12 col-md-6">
+            {{ form_row(form.dateCapture) }}
+        </div>
+
+        <div class="col-12 col-md-6">
+            {{ form_row(form.bacRecuperation) }}
+        </div>
+
+        <div class="col-12">
+            <h6 class="mb-3">Niveaux des toners (%)</h6>
+        </div>
+
+        <div class="col-12 col-md-6 col-lg-3">
+            {{ form_row(form.noirPourcent) }}
+        </div>
+
+        <div class="col-12 col-md-6 col-lg-3">
+            {{ form_row(form.cyanPourcent) }}
+        </div>
+
+        <div class="col-12 col-md-6 col-lg-3">
+            {{ form_row(form.magentaPourcent) }}
+        </div>
+
+        <div class="col-12 col-md-6 col-lg-3">
+            {{ form_row(form.jaunePourcent) }}
+        </div>
+    </div>
+
+    <div class="d-flex gap-2 mt-4">
+        <button type="submit" class="btn btn-primary">
+            <i class="bi bi-check-circle"></i> {{ button_label|default('Enregistrer') }}
+        </button>
+        <a href="{{ path('app_etat_consommable_index') }}" class="btn btn-outline-secondary">
+            <i class="bi bi-x-circle"></i> Annuler
+        </a>
+    </div>
 {{ form_end(form) }}
