--- a/templates/modele/_delete_form.html.twig
+++ b/templates/modele/_delete_form.html.twig
@@ -1,4 +1,6 @@
-<form method="post" action="{{ path('app_modele_delete', {'id': modele.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('app_modele_delete', {'id': modele.id}) }}" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer ce modèle ?');" class="d-inline">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ modele.id) }}">
-    <button class="btn">Delete</button>
+    <button type="submit" class="btn btn-outline-danger w-100">
+        <i class="bi bi-trash"></i> Supprimer
+    </button>
 </form>
